# numbits

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml  tests.yaml
src/: build.sh  numbits.cpp
tests/: benchmark.py  stress_numbits.py  test_numbits.py
